Updated to v0.5.2, see ChangeLog.md for more details
- Updated to the latest xSE builds.
- Added experimental Fallout 4 VR build.

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,9 @@ Bin/*
 Junk/*
 ScriptExtender/*
 
-Build/F4SE/*
-Build/NVSE/*
 Build/SKSE/*
 Build/SKSE64/*
 Build/SKSEVR/*
+Build/NVSE/*
+Build/F4SE/*
+Build/F4SEVR/*
