Linked to KxFramework, removed dependency to local copy of Detours (VCPkg is used now)

--- a/PrivateProfileRedirector.vcxproj.filters
+++ b/PrivateProfileRedirector.vcxproj.filters
@@ -226,6 +226,9 @@
     <None Include="ChangeLog.md">
       <Filter>Resources</Filter>
     </None>
+    <None Include="README.md">
+      <Filter>Resources</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Build\PrivateProfileRedirector_preload.txt">
