--- a/PrivateProfileRedirector.vcxproj.filters
+++ b/PrivateProfileRedirector.vcxproj.filters
@@ -8,9 +8,6 @@
     <Filter Include="Code\xSE">
       <UniqueIdentifier>{57b08a04-a4a6-4158-9545-bcc203a02920}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Code\Utility">
-      <UniqueIdentifier>{57f912be-12f4-44b9-bd34-6ba680dda8ae}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Resources">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -35,39 +32,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="resource.h">
       <Filter>Resources</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\CriticalSection.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\EnumClassOperations.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\KxBasicDynamicString.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\KxCallAtScopeExit.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\KxDynamicString.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\KxOptionSet.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\KxWithOptions.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\LibraryHandle.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\SimpleINI.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\SRWLock.h">
-      <Filter>Code\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\String.h">
-      <Filter>Code\Utility</Filter>
     </ClInclude>
     <ClInclude Include="Source\xSE\ScriptExtenderInterfaceNVSE.h">
       <Filter>Code\xSE</Filter>
@@ -126,9 +90,6 @@
     <ClInclude Include="Source\Qx\EventSystem\EvtHandler.h">
       <Filter>Code\Qx\EventSystem</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Qx\ClientData.h">
-      <Filter>Code\Qx</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Qx\Utility.h">
       <Filter>Code\Qx</Filter>
     </ClInclude>
@@ -156,18 +117,18 @@
     <ClInclude Include="Source\Qx\EventSystem\Events\QxGameEvent.h">
       <Filter>Code\Qx\EventSystem\Events</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Common.h">
+      <Filter>Code</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CommonWinAPI.h">
+      <Filter>Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\PrivateProfileRedirector.cpp">
       <Filter>Code</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="Source\Utility\KxDynamicString.cpp">
-      <Filter>Code\Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Utility\String.cpp">
-      <Filter>Code\Utility</Filter>
-    </ClCompile>
     <ClCompile Include="Source\RedirectedFunctions.cpp">
       <Filter>Code</Filter>
     </ClCompile>
@@ -234,10 +195,5 @@
     <Text Include="Build\PrivateProfileRedirector_preload.txt">
       <Filter>Resources</Filter>
     </Text>
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="Source\Utility\KxBasicDynamicString.natvis">
-      <Filter>Resources\Utility</Filter>
-    </Natvis>
   </ItemGroup>
 </Project>
