--- a/PrivateProfileRedirector.vcxproj
+++ b/PrivateProfileRedirector.vcxproj
@@ -789,18 +789,6 @@ copy "$(ProjectDir)Build\$(TargetName)_preload.txt" "$(ProjectDir)Bin\$(Configur
     <ClInclude Include="Source\INIWrapper.h" />
     <ClInclude Include="Source\PrivateProfileRedirector.h" />
     <ClInclude Include="Source\FunctionTable.h" />
-    <ClInclude Include="Source\Qx\EventSystem\CallWrapper.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Common.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Event.h" />
-    <ClInclude Include="Source\Qx\EventSystem\EventBuilder.h" />
-    <ClInclude Include="Source\Qx\EventSystem\EventFilter.h" />
-    <ClInclude Include="Source\Qx\EventSystem\EventItem.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Events\QxConsoleEvent.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Events\QxGameEvent.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Events\QxIdleEvent.h" />
-    <ClInclude Include="Source\Qx\EventSystem\Events\QxNotifyEvent.h" />
-    <ClInclude Include="Source\Qx\EventSystem\EvtHandler.h" />
-    <ClInclude Include="Source\Qx\Utility.h" />
     <ClInclude Include="Source\RedirectedFunctions.h" />
     <ClInclude Include="Source\RedirectorConfig.h" />
     <ClInclude Include="Source\xSE\ConsoleCommandOverrider\F4SE.h">
@@ -851,6 +839,8 @@ copy "$(ProjectDir)Build\$(TargetName)_preload.txt" "$(ProjectDir)Bin\$(Configur
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='NVSE|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='SKSE|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Source\xSE\ConsoleEvent.h" />
+    <ClInclude Include="Source\xSE\GameEvent.h" />
     <ClInclude Include="Source\xSE\IConsoleCommandOverrider.h" />
     <ClInclude Include="Source\xSE\ScriptExtenderDefines.h" />
     <ClInclude Include="Source\xSE\ScriptExtenderDefinesBase.h" />
@@ -865,10 +855,6 @@ copy "$(ProjectDir)Build\$(TargetName)_preload.txt" "$(ProjectDir)Bin\$(Configur
     <ClCompile Include="Source\FunctionRedirector.cpp" />
     <ClCompile Include="Source\INIWrapper.cpp" />
     <ClCompile Include="Source\PrivateProfileRedirector.cpp" />
-    <ClCompile Include="Source\Qx\EventSystem\Event.cpp" />
-    <ClCompile Include="Source\Qx\EventSystem\EventBuilder.cpp" />
-    <ClCompile Include="Source\Qx\EventSystem\EventItem.cpp" />
-    <ClCompile Include="Source\Qx\EventSystem\EvtHandler.cpp" />
     <ClCompile Include="Source\RedirectedFunctions.cpp" />
     <ClCompile Include="Source\RedirectorConfig.cpp" />
     <ClCompile Include="Source\xSE\ConsoleCommandOverrider\F4SE.cpp">
