Added ENB interface link

--- a/PrivateProfileRedirector.vcxproj
+++ b/PrivateProfileRedirector.vcxproj
@@ -909,6 +909,9 @@ copy "$(ProjectDir)Build\$(TargetName)_preload.txt" "$(ProjectDir)Bin\$(Configur
     <ClInclude Include="Source\Common.h" />
     <ClInclude Include="Source\CommonWinAPI.h" />
     <ClInclude Include="Source\ConfigObject.h" />
+    <ClInclude Include="Source\ENB\ENBAPI.h" />
+    <ClInclude Include="Source\ENB\ENBEvent.h" />
+    <ClInclude Include="Source\ENB\ENBInterface.h" />
     <ClInclude Include="Source\FunctionRedirector.h" />
     <ClInclude Include="Source\INIWrapper.h" />
     <ClInclude Include="Source\PrivateProfileRedirector.h" />
@@ -982,6 +985,8 @@ copy "$(ProjectDir)Build\$(TargetName)_preload.txt" "$(ProjectDir)Bin\$(Configur
   <ItemGroup>
     <ClCompile Include="Source\ConfigObject.cpp" />
     <ClCompile Include="Source\DLLMain.cpp" />
+    <ClCompile Include="Source\ENB\ENBAPI.cpp" />
+    <ClCompile Include="Source\ENB\ENBInterface.cpp" />
     <ClCompile Include="Source\FunctionRedirector.cpp" />
     <ClCompile Include="Source\INIWrapper.cpp" />
     <ClCompile Include="Source\PrivateProfileRedirector.cpp" />
